# shijue

./: .gitattributes  111.pgm  111.yaml  CMakeDirectoryInformation.cmake  CMakeLists.txt  COMMIT_EDITMSG  D31F.pgm  D31F.yaml  L305.pgm  L305.yaml  Makefile  classifier.cpp  cmake_install.cmake  config  frames_2025-12-18_21.25.18.gv  hallway.pgm  hallway.yaml  index  readme.md  run_biaoding.sh  setup_env.sh
install/: local_setup.sh  setup.sh
install/auto_aim_interfaces/share/auto_aim_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/behaviortree_ros2/include/behaviortree_ros2/: bt_action_node.hpp  bt_executor_parameters.hpp  bt_service_node.hpp  bt_topic_pub_action_node.hpp  bt_topic_pub_node.hpp  bt_topic_sub_node.hpp  bt_utils.hpp  plugins.hpp  ros_node_params.hpp  tree_execution_server.hpp
install/behaviortree_ros2/share/behaviortree_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/btcpp_ros2_interfaces/share/btcpp_ros2_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/btcpp_ros2_samples/lib/btcpp_ros2_samples/: bool_client  bool_server  sample_bt_executor  sleep_client  sleep_client_dyn  sleep_server  subscriber_test
install/btcpp_ros2_samples/share/btcpp_ros2_samples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/control_panel/lib/control_panel/: control_panel
install/control_panel/share/control_panel/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fake_vel_transform/lib/fake_vel_transform/: fake_vel_transform_node
install/fake_vel_transform/share/fake_vel_transform/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ign_sim_pointcloud_tool/lib/ign_sim_pointcloud_tool/: ign_sim_pointcloud_tool_node
install/ign_sim_pointcloud_tool/share/ign_sim_pointcloud_tool/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/joint_state_publisher/lib/joint_state_publisher/: joint_state_publisher
install/joint_state_publisher/share/joint_state_publisher/: package.dsv  package.ps1  package.sh  package.xml
install/joint_state_publisher_gui/lib/joint_state_publisher_gui/: joint_state_publisher_gui
install/joint_state_publisher_gui/share/joint_state_publisher_gui/: package.dsv  package.ps1  package.sh  package.xml
install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
install/livox_ros_driver2/share/livox_ros_driver2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/loam_interface/lib/loam_interface/: loam_interface_node
install/loam_interface/share/loam_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pb2025_nav_bringup/share/pb2025_nav_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pb2025_robot_description/share/pb2025_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pb2025_sentry_behavior/include/pb2025_sentry_behavior/: custom_types.hpp  pb2025_sentry_behavior_client.hpp  pb2025_sentry_behavior_server.hpp
install/pb2025_sentry_behavior/lib/pb2025_sentry_behavior/: pb2025_sentry_behavior_client  pb2025_sentry_behavior_server
install/pb2025_sentry_behavior/share/pb2025_sentry_behavior/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pb2025_sentry_nav/share/pb2025_sentry_nav/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pb_nav2_plugins/share/pb_nav2_plugins/: behavior_plugin.xml  costmap_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pb_omni_pid_pursuit_controller/share/pb_omni_pid_pursuit_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  pb_omni_pid_pursuit_controller.xml
install/pb_rm_interfaces/share/pb_rm_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/pb_teleop_twist_joy/lib/pb_teleop_twist_joy/: pb_teleop_twist_joy_node
install/pb_teleop_twist_joy/share/pb_teleop_twist_joy/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pcd2pgm/lib/pcd2pgm/: pcd2pgm_node
install/pcd2pgm/share/pcd2pgm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/point_lio/lib/point_lio/: pointlio_mapping
install/rmoss_cam/lib/rmoss_cam/: usb_cam  (+3 more)
log/: latest_build
logs/: HEAD
logs/refs/heads/: main
multithread/: mt_detector.cpp
omniperception/: CMakeLists.txt  Makefile  cmake_install.cmake
omniperception.dir/: DependInfo.cmake  build.make
planner/tinympc/: Makefile  cmake_install.cmake
refs/heads/: main
src/: 输出.py  输出.sh
src/StandardRobotpp-master/: .clang-format  LICENSE
src/StandardRobotpp-master/application/: robot_param_penguin_mini_arm.h  robot_param_penguin_mini_custom_controller.h
src/StandardRobotpp-master/doc/: questions.md  注意事项.md
src/my_map_pointcloud/: metadata.yaml
tools/: CMakeLists.txt  Makefile  cmake_install.cmake
yolos/: yolo11.cpp  yolov5.cpp  yolov8.cpp
(+1745 files in other folders)
